Basic working setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,18 @@
-prometheus:
-  image: prom/prometheus
-  ports:
-   - "9090:9090"
-grafana:
-  image: grafana/grafana
-  ports:
-   - "3000:3000"
-  links:
-   - prometheus
 pushgateway:
   image: prom/pushgateway
   ports:
    - "9091:9091"
+prometheus:
+  image: prom/prometheus
+  ports:
+   - "9090:9090"
+  volumes:
+   - ./prometheus:/etc/prometheus
+  links:
+   - pushgateway
+grafana:
+  image: grafana/grafana
+  ports:
+   - "3000:3000"
   links:
    - prometheus
